# bolognese

./: .gitignore  README.md  requirements.txt
src/: bus_server.py  player.py  server.py
src/app/: index.html  index.sublime-workspace
src/app/scripts/: app.js  controllers.js  directives.js  services.js
src/app/templates/: main.tpl.html
src/app/templates/directives/: ixxPlayerControls.tpl.html
src/vala/: CMakeLists.txt
src/vala/src/: player.vala
